syntax = "proto3";
option java_package = "com.bugenzhao.nga.protos.datamodel";

message Subject {
  repeated string tags = 1;
  string content = 2;
}

message Topic {
  string id = 1;
  repeated string tags = 8 [ deprecated = true ];
  string subject_content = 9 [ deprecated = true ];
  Subject subject = 2;
  string author_id = 3;
  string author_name = 4;
  uint64 post_date = 5;
  uint64 last_post_date = 6;
  uint32 replies_num = 7;
  optional Forum parent_forum = 10;
  optional string fav = 11;
  bool is_favored = 12;
  optional uint32 replies_num_last_visit = 13;
  string fid = 14;
}

message User {
  string id = 1;
  string name = 2;
  string avatar_url = 3;
  uint64 reg_date = 4;
  uint32 post_num = 5;
  sint64 fame = 6;
  PostContent signature = 7;
}

message PostId {
  string pid = 1;
  string tid = 2;
}

enum Device {
  APPLE = 0;
  ANDROID = 1;
  DESKTOP = 2;
}

message Post {
  PostId id = 6;
  uint32 floor = 1;
  string author_id = 2;
  PostContent content = 3;
  uint64 post_date = 4;
  uint32 score = 5;
  VoteState vote_state = 7;
  repeated Post hot_replies = 8;
  repeated Post comments = 12;
  Device device = 9;
  string alter_info = 10;
  uint32 at_page = 11;
  repeated Attachment attachments = 13;
  string fid = 14;
}

message LightPost {
  PostId id = 1;
  string author_id = 2;
  PostContent content = 3;
  uint64 post_date = 4;
}

message TopicWithLightPost {
  Topic topic = 1;
  LightPost post = 2;
}

message Subforum {
  Forum forum = 8;
  string filter_id = 7;
  uint64 attributes = 4;
  bool filterable = 5;
  bool selected = 6;
}

message Category {
  string id = 1;
  string name = 2;
  repeated Forum forums = 3;
}

message ForumId {
  oneof id { // todo: no oneof
    string fid = 1;
    string stid = 2;
  }
}

message Forum {
  ForumId id = 1;
  string name = 2;
  string info = 3;
  string icon_url = 4;
  string topped_topic_id = 5;
}

message Span {
  message Plain { string text = 1; }
  message BreakLine {}
  message Sticker { string name = 1; }
  message Tagged {
    string tag = 1;
    repeated string attributes = 2;
    repeated string complex_attributes = 4;
    repeated Span spans = 3;
  }

  oneof value {
    Plain plain = 1;
    BreakLine break_line = 2;
    Sticker sticker = 3;
    Tagged tagged = 4;
  }
}

message PostContent {
  repeated Span spans = 1;
  string raw = 2;
  string error = 3;
}

message Attachment {
  string url = 1;
  uint64 size = 2;
  string type = 3;
}

message Configuration { string document_dir_path = 1; }

message AuthInfo {
  string uid = 1;
  string token = 2;
  Device device = 3;
  string cached_name = 4;
}

enum VoteState {
  NONE = 0;
  UP = 1;
  DOWN = 2;
}

message TopicSnapshot {
  Topic topic_snapshot = 1;
  uint64 timestamp = 2;
}

message ErrorMessage {
  string code = 1;
  string info = 2;
  string detailed = 3;
}

message PostReplyVerbatim {
  bool modify_append = 1;
  string auth = 2;
  string attach_url = 3;
}

message PostReplyAction {
  enum Operation {
    REPLY = 0;
    QUOTE = 1;
    MODIFY = 2;
    COMMENT = 3;
    NEW = 4;
  }
  Operation operation = 1;
  PostId post_id = 2;
  ForumId forum_id = 3;
  PostReplyVerbatim verbatim = 4;
}

message Notification {
  enum Type {
    UNKNOWN = 0;
    REPLY_TOPIC = 1;
    REPLY_POST = 2;
    SHORT_MESSAGE_START = 10;
    SHORT_MESSAGE = 11;
    VOTE = 17;
  }
  string id = 9;
  Type type = 1;
  User other_user = 2;
  PostId post_id = 3;
  PostId other_post_id = 4;
  Subject topic_subject = 5;
  uint64 timestamp = 6;
  uint32 page = 7;
  bool read = 8;
}

message BlockWord { string word = 1; }

message PostAttachment {
  string name = 1;
  string url = 2;
  string check = 3;
}

message ShortMessage {
  string id = 1;
  string subject = 2;
  string from_id = 3;
  string from_name = 4;
  uint64 post_date = 5;
  uint64 last_post_date = 6;
  uint32 post_num = 7;
}

message ShortMessagePost {
  string id = 1;
  string author_id = 2;
  string subject = 3;
  PostContent content = 4;
  uint64 post_date = 5;
}

message ShortMessagePostAction {
  enum Operation {
    REPLY = 0;
    NEW = 1;
    NEW_SINGLE_TO = 2;
  }
  Operation operation = 1;
  string mid = 2;
  string single_to = 3;
}
